# phenokits-commons

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS.md  deny.toml  pytest.ini
.github/workflows/: ci.yml  deny.yml  sbom.yml  trufflehog.yml
Tracera/: .gitignore
archive/PhenoKits-preservation-2026-06-20/: ORIGIN.md
configs/: README.md  params.example.json
configs/app/: README.md
configs/app/phenotype-config/: README.md  pyproject.toml
configs/app/phenotype-config/src/phenotype_config/: __init__.py  config.py
configs/cicd/: README.md
configs/infra/: Dockerfile  README.md
configs/tooling/: README.md  codecov.yml  mypy.ini
credentials/: README.md
docs/: AGENT_PATTERNS.md  README.md  RESTRUCTURING_ADR.md  RESTRUCTURING_PLAN.md  landing.json
docs/absorption/: PHENOKITS_GAP_PORT.md  PHENOPROC_GOVERNANCE_PORT.md  RUNTIME_LIBS_REMOVED_2026-06-20.md
docs/audit/: BLOCK-C-AUDIT.md  BLOCK-C-CONSOLIDATION-PLAN.md
docs/boundary/: DISPOSITION.md
docs/governance/: actual-shared-crates-audit-2026-04-25.md  adr-2026-04-26-errors-dual-interface-strategy.md  adr-2026-04-26-sunset-maturity-operating-model.md  alert-sync-policy.md  authkit-go-ownership-policy-2026-04-26.md  (+16 more)
governance/: GOVERNANCE-TEMPLATE-FLEET-DEFAULTS.md  README.md
hexagon/: .pre-commit-config.yaml  ADR.md  AGENTS.md  CHARTER.md  CONTRIBUTING.md  FAQ.md  PLAN.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  SOTA.md  SPEC.md
hexagon/templates/rust/: ADR.md  CLAUDE.md  Cargo.toml  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  clippy.toml  pyproject.toml
hexagon/templates/rust/docs/: index.md
hexagon/templates/rust/docs/.vitepress/: config.mts
hexagon/templates/rust/docs/journeys/: index.md  quick-start.md
hexagon/templates/rust/docs/research/: SOTA.md
hexagon/templates/rust/docs/stories/: hello-world.md
hexagon/templates/rust/src/: main.rs
hexagon/templates/rust/src/application/ports/: inbound.rs  outbound.rs
hexagon/templates/rust/src/application/use_cases/: mod.rs
hexagon/templates/rust/src/domain/entities/: mod.rs
hexagon/templates/rust/src/domain/ports/: mod.rs
hexagon/templates/rust/src/domain/services/: mod.rs
hexagon/templates/rust/src/infrastructure/adapters/: mod.rs  repository.rs  web_server.rs
hexagon/templates/rust/src/infrastructure/config/: app_config.rs
libs/: README.md
libs/python/: README.md
libs/python/phenokit-config-kit/: README.md  pyproject.toml
libs/python/phenokit-config-kit/config_kit/: __init__.py
libs/python/phenokit-config-kit/config_kit/pytest/: __init__.py
libs/python/phenokit-config-kit/config_kit/pytest/data/: __init__.py
libs/python/phenokit-config-kit/config_kit/pytest/fixtures/: common.py  performance.py  security.py
libs/python/phenokit-config-kit/config_kit/pytest/plugins/: security.py
libs/python/phenokit-config-kit/linting/: .editorconfig  .markdownlint.json  README.md  linters.toml  pre-commit-hooks.yaml  pyproject.toml
libs/python/phenokit-config-kit/linting/ci-cd/: gatekeeper.toml
libs/python/phenokit-config-kit/linting/ci-cd/scripts/: quality-gate.sh
libs/python/phenokit-config-kit/linting/git-hooks/: commit-msg  pre-commit
libs/python/phenokit-config-kit/pre-commit/: basic.yaml  comprehensive.yaml  security.yaml
libs/python/phenokit-config-kit/pytest/: README.md  basic.ini  ci.ini  comprehensive.ini  parallel.ini  performance.ini  security.ini
libs/python/phenokit-config-kit/pytest/data/: factory.py
libs/python/phenokit-config-kit/pytest/fixtures/: __init__.py
libs/python/phenokit-config-kit/pytest/plugins/: __init__.py  architecture.py  performance.py
libs/python/phenotype-id/: pyproject.toml
libs/python/phenotype-id/src/phenotype_id/: __init__.py  id.py
observability/: README.md
policies/: README.md
schemas/: README.md  config-params.json  config-params.schema.json
scripts/: README.md
secrets/: README.md
security/: README.md
templates/: README.md
templates/clean-rust/: Cargo.toml  README.md
templates/clean-rust/src/domain/: mod.rs
templates/clean-rust/src/domain/entities/: mod.rs
templates/clean-rust/src/domain/errors/: mod.rs
templates/clean-rust/src/domain/ports/: mod.rs
templates/hexagonal/hexagonal-python/: pyproject.toml
templates/hexagonal/hexagonal-python/src/application/: __init__.py
templates/hexagonal/hexagonal-python/src/domain/errors/: __init__.py
templates/hexagonal/hexagonal-python/src/domain/ports/inbound/: __init__.py
templates/hexagonal/hexagonal-python/src/domain/ports/outbound/: __init__.py
templates/hexagonal/hexagonal-python/tests/domain/: test_order_entity.py
templates/microservice-scaffold/python/: pyproject.toml
templates/microservice-scaffold/python/src/: __init__.py  main.py
templates/microservice-scaffold/python/src/application/: __init__.py  commands.py  handlers.py  queries.py
templates/microservice-scaffold/python/src/domain/: __init__.py  entities.py  errors.py  ports.py  value_objects.py
templates/microservice-scaffold/python/src/infrastructure/: __init__.py  config.py  logging.py  metrics.py
templates/microservice-scaffold/python/src/infrastructure/adapters/: messaging.py  persistence.py
templates/microservice-scaffold/python/src/interfaces/api/: handlers.py  main.py
templates/microservice-scaffold/python/tests/: __init__.py  test_persistence.py
templates/phenotype-api/: README.md  pyproject.toml
templates/phenotype-api/src/phenotype_api/: __init__.py  api.py
tests/: __init__.py  conftest.py  pyproject.toml  test_categories.py  test_cicd_security.py  test_config.py  test_python_libs.py  test_structure.py
worklogs/: AGGREGATE_2026_04_25.md  AGILEPLUS_SPECS_STATUS_2026_04_25.md  ARCHITECTURE.md  CARRY_OVER_2026_04_25.md  GOVERNANCE.md  P0_DRIFT_DISPOSITION_2026_04_26.md  README.md  RESEARCH.md  SESSION_2026_04_25_OCI_AND_ORG_PAGES.md  SUNSET_MATURITY_WBS_2026_04_26.md  WORKTREE_QUARANTINE_LEDGER_2026_04_26.md
(+348 files in other folders)
