[package]
name = "clean-rust"
version = "0.1.0"
edition = "2021"
authors = ["AgilePlus Team"]
description = "Clean Architecture Rust Template"

[dependencies]
# Error handling - Wrap over standard error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization - Wrap over serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - Wrap over sqlx
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Logging - Wrap over tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation - Wrap over validator
validator = { version = "0.16", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# Environment
dotenvy = "0.15"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"

[[bin]]
name = "clean-rust"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = ["anyhow", "dotenvy", "serde_json", "sqlx", "tokio", "tracing", "tracing-subscriber", "validator"]
