[project]
name = "phenotype-api"
version = "0.1.0"
description = "FastAPI app factory with standard middleware and error handling for Phenotype services"
readme = "README.md"
authors = [{ name = "Phenotype Team" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
asyncio_mode = "auto"
