[package]
name = "hexagonal-rust-template"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Database (compile-time checked SQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
[dev-dependencies]
tokio-test = "0.4"
sqlx-test = "0.1"
mockall = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "app"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = ["config", "dotenvy", "hyper", "serde_json", "thiserror", "tokio-util", "tower", "tower-http", "tracing-opentelemetry", "validator"]
