[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "phenokit-config-kit"
version = "0.1.0"
description = "Centralized configuration management for Python projects - pytest plugins, fixtures, linting configs, and pre-commit hooks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "PhenoKit Team" }]
keywords = ["pytest", "configuration", "linting", "pre-commit", "testing", "fixtures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"

[project.optional-dependencies]
# Core dependencies (required for basic usage)
core = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

# Pre-commit dependencies
precommit = [
    "pre-commit>=3.0.0",
]

# Testing dependencies - includes pytest plugins
testing = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "coverage>=7.4.0",
    "psutil>=5.9.0",
]

# Linting dependencies
linting = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "prospector>=1.10.0",
    "yamllint>=1.35.0",
    "markdownlint-cli>=0.38.0",
]

# All dependencies
all = [
    "phenokit-config-kit[core,precommit,testing,linting]"
]

[project.entry-points.pytest11]
config_kit_architecture = "config_kit.pytest.plugins.architecture"
config_kit_performance = "config_kit.pytest.plugins.performance"
config_kit_security = "config_kit.pytest.plugins.security"

[project.urls]
Homepage = "https://github.com/KooshaPari/PhenoKits/tree/main/libs/python/phenokit-config-kit"
Documentation = "https://github.com/KooshaPari/PhenoKits/blob/main/libs/python/phenokit-config-kit/README.md"
Repository = "https://github.com/KooshaPari/PhenoKits"

[tool.hatch.build.targets.wheel]
packages = ["config_kit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config_kit*"]

[tool.setuptools.package-data]
config_kit = [
    "pre-commit/*.yaml",
    "pytest/*.ini",
    "pytest/plugins/*.py",
    "pytest/fixtures/*.py",
    "pytest/data/*.py",
    "linting/*",
    "linting/ci-cd/*",
    "linting/git-hooks/*",
]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["config_kit"]
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "performance: Performance tests",
    "security: Security tests",
]
